# agent-workflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  constitution.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  concepts.md  development-workflow-mvp.md  lifecycle.md  product-metrics.md
docs/adr/: 0001-project-boundaries.md  0002-contract-first-design.md  0003-artifact-based-handoff.md  0004-optional-adapters.md  0005-high-value-model-capacity-isolation.md
docs/integration/: agent-bus.md  ai-memory.md
docs/later/: agent-bus.md  agent-host.md  ai-memory.md
docs/reviews/: 2026-07-18-product-positioning-audit.md  phase0-followups.md
docs/tasks/: durable-handler-exit-evidence-implementation-report.md  durable-handler-exit-evidence.md  executor-process-boundary-fail-closed.md  executor-process-boundary-implementation-report.md  opencode-file-array-boundary-implementation-report.md  opencode-file-array-boundary.md  postflight-completion-contract.md  postflight-completion-implementation-report.md  push-remote-sha-gate.md  (+18 more)
profiles/: local-example.yaml  personal-dev-example.yaml
roles/: arbiter.yaml  implementer.yaml  planner.yaml  reviewer.yaml  summarizer.yaml  tester.yaml
schemas/: artifact.schema.json  binding.schema.json  event.schema.json  policy.schema.json  role.schema.json  workflow.schema.json
scripts/: awf-dispatch.sh  awf-listen.sh  awf_bootstrap.py  awf_handoff_check.py  awf_listen.py  awf_role.py  executor-prompt.md  reviewer-prompt.md
tests/: test_awf_role.py  test_cli.py  test_examples.py  test_schemas.py
workflows/: bugfix.yaml  documentation.yaml  feature-delivery.yaml  research.yaml
(+41 files in other folders)
